--- a/rsc.qrc
+++ b/rsc.qrc
@@ -10,4 +10,79 @@
     <qresource prefix="/fightInterface/background">
         <file>BattleField.jpeg</file>
     </qresource>
+    <qresource prefix="/card/image"/>
+    <qresource prefix="/">
+        <file>card/0/1.jpg</file>
+        <file>card/0/1.txt</file>
+        <file>card/0/2.jpg</file>
+        <file>card/0/2.txt</file>
+        <file>card/0/3.jpg</file>
+        <file>card/0/3.txt</file>
+        <file>card/0/4.jpg</file>
+        <file>card/0/4.txt</file>
+        <file>card/0/5.jpg</file>
+        <file>card/0/5.txt</file>
+        <file>card/0/6.jpg</file>
+        <file>card/0/6.txt</file>
+        <file>card/0/7.jpg</file>
+        <file>card/0/7.txt</file>
+        <file>card/0/8.jpg</file>
+        <file>card/0/8.txt</file>
+        <file>card/1/1.jpg</file>
+        <file>card/1/1.txt</file>
+        <file>card/1/10.jpg</file>
+        <file>card/1/10.txt</file>
+        <file>card/1/11.jpg</file>
+        <file>card/1/11.txt</file>
+        <file>card/1/12.jpg</file>
+        <file>card/1/12.txt</file>
+        <file>card/1/13.jpg</file>
+        <file>card/1/13.txt</file>
+        <file>card/1/14.jpg</file>
+        <file>card/1/14.txt</file>
+        <file>card/1/2.jpg</file>
+        <file>card/1/2.txt</file>
+        <file>card/1/3.jpg</file>
+        <file>card/1/3.txt</file>
+        <file>card/1/4.jpg</file>
+        <file>card/1/4.txt</file>
+        <file>card/1/5.jpg</file>
+        <file>card/1/5.txt</file>
+        <file>card/1/6.jpg</file>
+        <file>card/1/6.txt</file>
+        <file>card/1/7.jpg</file>
+        <file>card/1/7.txt</file>
+        <file>card/1/8.jpg</file>
+        <file>card/1/8.txt</file>
+        <file>card/1/9.jpg</file>
+        <file>card/1/9.txt</file>
+        <file>card/2/1.jpg</file>
+        <file>card/2/1.txt</file>
+        <file>card/2/10.jpg</file>
+        <file>card/2/10.txt</file>
+        <file>card/2/11.jpg</file>
+        <file>card/2/11.txt</file>
+        <file>card/2/12.jpg</file>
+        <file>card/2/12.txt</file>
+        <file>card/2/13.jpg</file>
+        <file>card/2/13.txt</file>
+        <file>card/2/14.jpg</file>
+        <file>card/2/14.txt</file>
+        <file>card/2/2.jpg</file>
+        <file>card/2/2.txt</file>
+        <file>card/2/3.jpg</file>
+        <file>card/2/3.txt</file>
+        <file>card/2/4.jpg</file>
+        <file>card/2/4.txt</file>
+        <file>card/2/5.jpg</file>
+        <file>card/2/5.txt</file>
+        <file>card/2/6.jpg</file>
+        <file>card/2/6.txt</file>
+        <file>card/2/7.jpg</file>
+        <file>card/2/7.txt</file>
+        <file>card/2/8.jpg</file>
+        <file>card/2/8.txt</file>
+        <file>card/2/9.jpg</file>
+        <file>card/2/9.txt</file>
+    </qresource>
 </RCC>
